meeting: add the hostname and port
